--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> Test page </title>
-    <script defer src="src/index.js" charset="utf-8"></script>
-  </head>
-  
-  <div id="quotes">
-	Quote line.
-  </div><br>
-
-  <button id="submit"> Submit </button>
-
-</body>
+<html>
+   <head>
+      <title>Sample Page</title>
+   </head>
+   
+   <body>
+      Hello World!
+   </body>
 </html>
